feat: css styling finished (index)

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                     <li class="nav-item">
                         
-                        <a href="add.html" class="btn btn-primary">Abrir Vagas</a>
+                        <a href="add.html" class="nav-link btn btn-primary">Abrir Vagas</a>
                         
                     </li>
                 </ul>
@@ -47,7 +47,7 @@
 
         <h1 id="main-title" class="text-center">Encontre o emprego dos seus sonhos!</h1>
 
-        <p id="main-subtitle" class="text-center">Somos o site com mais vagas de tecnologia do mercado, direcionadas a Home Office ☕💻</p>
+        <p id="main-subtitle" class="text-center">Somos o site com mais vagas de tecnologia do mercado, direcionadas a Home Office</p>
 
         <form action="" id="search-form" class="form-inline">
 
